--- a/public/frontend/baratto.html
+++ b/public/frontend/baratto.html
@@ -88,8 +88,8 @@
                         <!-- selezione figurine possedute -->
                          <div class="col-md-6">
                             <h5 class="text-center text-dark mt-2">Le Tue Figurine</h5>
-                            <div class="border-rounded p-2" style="max-height: 300px; overflow-y: auto;">
-                                <ul id="figurine-possedute-list" class="list-group">
+                            <div class="border-rounded p-2 bg-dark" style="max-height: 300px; overflow-y: auto;">
+                                <ul id="figurine-possedute-list" class="list-group bg-dark">
                                     <!-- <li class="list-group-item d-flex align-items-center">
                                         <input type="checkbox" class="form-check-input me-2">
                                         <img src="https://via.placeholder.com/40" alt="Figurina" class="rounded me-2">
@@ -207,9 +207,10 @@
                 </p>
             </footer>
         </div>
+        <script src="/frontend/js/market.js"></script>
         <!-- <script src="/frontend/js/homepage.js" defer></script> -->
-        <script src="/frontend/js/market-display.js"></script>
+        <!-- <script src="/frontend/js/market-display.js"></script>
         <script src="/frontend/js/user-figurine.js"></script>
-        <script src="/frontend/js/market-figurine.js"></script>
+        <script src="/frontend/js/market-figurine.js"></script> -->
     </body>
 </html>
