--- a/public/frontend/baratto.html
+++ b/public/frontend/baratto.html
@@ -56,7 +56,7 @@
                 <div class="section-container">
                     <h2 class="text-dark">Mercato di Scambio</h2>
                     <div id="marketplace" class="table-responsive">
-                        <table class="table table-striped table-hover text-center align-middle">
+                        <table class="table table-striped table-hover">
                             <thead class="table-dark">
                                 <tr>
                                     <th scope="col">Utente</th>
@@ -66,6 +66,11 @@
                                 </tr>
                             </thead>
                             <tbody id="marketplace-table">
+                                <tr><td></td><td></td><td></td><td></td></tr>
+                                <tr><td></td><td></td><td></td><td></td></tr>
+                                <tr><td></td><td></td><td></td><td></td></tr>
+                                <tr><td></td><td></td><td></td><td></td></tr>
+                                <tr><td></td><td></td><td></td><td></td></tr>
                                 <!-- riga di esempio: -->
                                 <!-- <tr>
                                     <td><strong>MarioRossi</strong></td>
@@ -88,8 +93,13 @@
                         <!-- selezione figurine possedute -->
                          <div class="col-md-6">
                             <h5 class="text-center text-dark mt-2">Le Tue Figurine</h5>
-                            <div class="border-rounded p-2 bg-dark" style="max-height: 300px; overflow-y: auto;">
-                                <ul id="figurine-possedute-list" class="list-group bg-dark">
+                            <div class="border-rounded p-2" style="max-height: 300px; overflow-y: auto;">
+                                <ul id="figurine-possedute-list" class="list-group">
+                                    <li></li>
+                                    <li></li>
+                                    <li></li>
+                                    <li></li>
+                                    <li></li>
                                     <!-- <li class="list-group-item d-flex align-items-center">
                                         <input type="checkbox" class="form-check-input me-2">
                                         <img src="https://via.placeholder.com/40" alt="Figurina" class="rounded me-2">
@@ -106,6 +116,11 @@
                             <h5 class="text-center text-dark mt-2">Le Tue Figurine sul Mercato</h5>
                             <div class="border-rounded p-2" style="max-height: 300px; overflow-y: auto;">
                                 <ul id="figurine-sul-mercato-list" class="list-group">
+                                    <li></li>
+                                    <li></li>
+                                    <li></li>
+                                    <li></li>
+                                    <li></li>
                                     <!-- <li class="list-group-item d-flex align-items-center">
                                         <input type="checkbox" class="form-check-input me-2">
                                         <img src="https://via.placeholder.com/40" alt="Figurina" class="rounded me-2">
@@ -128,7 +143,7 @@
                         <!-- tabella delle proposte di scambio -->
                          <div class="col-md-8">
                             <div class="table-responsive" style="max-height: 300px; overflow-y: auto;">
-                                <table class="table table-bordered text-center align-middle">
+                                <table class="table text-center align-middle table-striped table-hover">
                                     <thead class="table-dark">
                                         <tr>
                                             <th>Utente</th>
@@ -138,6 +153,11 @@
                                         </tr>
                                     </thead>
                                     <tbody id="proposte-scambio-list">
+                                        <tr><td></td><td></td><td></td><td></td></tr>
+                                        <tr><td></td><td></td><td></td><td></td></tr>
+                                        <tr><td></td><td></td><td></td><td></td></tr>
+                                        <tr><td></td><td></td><td></td><td></td></tr>
+                                        <tr><td></td><td></td><td></td><td></td></tr>
                                         <!-- proposte di scambio caricate qui -->
                                     </tbody>
                                 </table>
@@ -164,7 +184,7 @@
 
                     <h6 class="text-dark text-center">In Uscita</h6>
                     <div class="table-responsive" style="max-height: 300px; overflow-y: auto;">
-                        <table class="table table-bordered text-center align-middle">
+                        <table class="table text-center align-middle table-striped table-hover">
                             <thead class="table-dark">
                                 <tr>
                                     <th>Hai proposto a</th>
@@ -174,6 +194,11 @@
                                 </tr>
                             </thead>
                             <tbody id="storico-proposte-list">
+                                <tr><td></td><td></td><td></td><td></td></tr>
+                                <tr><td></td><td></td><td></td><td></td></tr>
+                                <tr><td></td><td></td><td></td><td></td></tr>
+                                <tr><td></td><td></td><td></td><td></td></tr>
+                                <tr><td></td><td></td><td></td><td></td></tr>
                                 <!-- storico delle proposte di scambio caricate qui -->
                             </tbody>
                         </table>
