--- a/public/frontend/baratto.html
+++ b/public/frontend/baratto.html
@@ -46,18 +46,18 @@
             </nav>
             <header class="py-3 mb-4">
                 <div class="container d-flex flex-wrap justify-content-center">
-                    <a href="" class="d-flex align-items-center mb-3 mb-lg-0 me-lg-auto text-dark text-decoration-none">
+                    <a href="" class="d-flex align-items-center mb-3 mb-lg-0 me-lg-auto text-light text-decoration-none">
                         <!-- <svg class="bi me-2" width="40" height="32"></svg> -->
                         <span class="fs-4 text-white">MarvelHeroes</span>
                     </a>
                 </div>
             </header>
             <main class="container py-4 mt-4">
-                <div class="section-container">
-                    <h2 class="text-dark">Mercato di Scambio</h2>
-                    <div id="marketplace" class="table-responsive">
+                <div class="section-container bg-dark">
+                    <h2 class="text-light">Mercato di Scambio</h2>
+                    <div id="marketplace" class="table-responsive border-rounded">
                         <table class="table table-striped table-hover">
-                            <thead class="table-dark">
+                            <thead class="table-light">
                                 <tr>
                                     <th scope="col">Utente</th>
                                     <th scope="col">Figurina Proposta</th>
@@ -88,11 +88,11 @@
                         </table>
                     </div>
                 </div>
-                <div class="section-container mt-4">
+                <div class="section-container mt-4 bg-dark">
                     <div class="row">
                         <!-- selezione figurine possedute -->
                          <div class="col-md-6">
-                            <h5 class="text-center text-dark mt-2">Le Tue Figurine</h5>
+                            <h5 class="text-center text-light mt-2">Le Tue Figurine</h5>
                             <div class="border-rounded p-2" style="max-height: 300px; overflow-y: auto;">
                                 <ul id="figurine-possedute-list" class="list-group">
                                     <li></li>
@@ -113,7 +113,7 @@
 
                          <!-- sezione figurine sul mercato -->
                           <div class="col-md-6">
-                            <h5 class="text-center text-dark mt-2">Le Tue Figurine sul Mercato</h5>
+                            <h5 class="text-center text-light mt-2">Le Tue Figurine sul Mercato</h5>
                             <div class="border-rounded p-2" style="max-height: 300px; overflow-y: auto;">
                                 <ul id="figurine-sul-mercato-list" class="list-group">
                                     <li></li>
@@ -136,9 +136,9 @@
                           </div>
                     </div>
                 </div>
-                <div class="section-container mt-4">
-                    <h5 class="text-center text-dark">Proposte di Scambio</h5>
-                    <h6 class="text-dark">In Entrata</h6>
+                <div class="section-container mt-4 bg-dark">
+                    <h5 class="text-center text-light">Proposte di Scambio</h5>
+                    <h6 class="text-light">In Entrata</h6>
                     <div class="row">
                         <!-- tabella delle proposte di scambio -->
                          <div class="col-md-8">
@@ -167,13 +167,13 @@
                          <!-- sezione laterale per la preview dello scambio -->
                          <div class="col-md-4">
                             <div class="border-rounded p-3 text-center">
-                                <h6 class="text-dark">Anteprima scambio</h6>
+                                <h6 class="text-light">Anteprima scambio</h6>
                                 <div class="d-flex flex-column align-items-center">
-                                    <p class="mb-1 text-dark">Hai dato:</p>
+                                    <p class="mb-1 text-light">Hai dato:</p>
                                     <div id="scambio-figurina-out" class="border p-2 mb-3" style="width: 120px; height: 120px;">
                                         <!-- figurina data caricata qui -->
                                     </div>
-                                    <p class="mb-1 text-dark">In cambio di:</p>
+                                    <p class="mb-1 text-light">In cambio di:</p>
                                     <div id="scambio-figurina-in" class="border p-2" style="width: 120px; height: 120px;">
                                         <!-- figurina ricevuta caricata qui -->
                                     </div>
@@ -182,7 +182,7 @@
                          </div>
                     </div>
 
-                    <h6 class="text-dark text-center">In Uscita</h6>
+                    <h6 class="text-light text-center">In Uscita</h6>
                     <div class="table-responsive" style="max-height: 300px; overflow-y: auto;">
                         <table class="table text-center align-middle table-striped table-hover">
                             <thead class="table-dark">
@@ -204,18 +204,18 @@
                         </table>
                     </div>
 
-                    <h6 class="text-center text-dark">
+                    <h6 class="text-center text-light">
                         Proponi Baratto a: <span id="username-destinatario" class="fw-bold"></span>
                     </h6>
                     <div class="d-flex justify-content-center gap-4 mt-3">
                         <div class="text-center">
-                            <h7 class="text-dark">Tu dai</h7>
+                            <h7 class="text-light">Tu dai</h7>
                             <div id="baratto-uscita-tu-dai" class="border p-3 rounded d-flex flex-column align-items-center" style="width: 150px; height: 200px">
                                 <!-- figurina che vuoi dare caricata qui -->
                             </div>
                         </div>
                         <div class="text-center">
-                            <h7 class="text-dark">In cambio di</h7>
+                            <h7 class="text-light">In cambio di</h7>
                             <div id="baratto-uscita-in-cambio-di" class="border p-3 rounded d-flex flex-column align-items-center" style="width: 150px; height: 200px">
                                 <!-- figurina che vuoi ricevere caricata qui -->
                             </div>
