--- a/public/frontend/baratto.html
+++ b/public/frontend/baratto.html
@@ -8,6 +8,7 @@
 
         <link href="/frontend/css/homepage.css" rel="stylesheet">
         <link href="/frontend/css/baratto.css" rel="stylesheet">
+        <link href="/frontend/css/figurine.css" rel="stylesheet">
     </head>
     <body class="d-flex h-100 text-center bg-darkred text-white">
         <!--Bootstrap Bundle con Popper (?)-->
@@ -48,8 +49,9 @@
                 <div class="container d-flex flex-wrap justify-content-center">
                     <a href="" class="d-flex align-items-center mb-3 mb-lg-0 me-lg-auto text-light text-decoration-none">
                         <!-- <svg class="bi me-2" width="40" height="32"></svg> -->
-                        <span class="fs-4 text-white">MarvelHeroes</span>
+                        <span class="fs-4 text-white">MarvelHeroes </span>
                     </a>
+                    <span class="fs-4 text-white" id="username-span"></span>
                 </div>
             </header>
             <main class="container py-4 mt-4">
@@ -207,22 +209,27 @@
                     <h6 class="text-center text-light">
                         Proponi Baratto a: <span id="username-destinatario" class="fw-bold"></span>
                     </h6>
-                    <div class="d-flex justify-content-center gap-4 mt-3">
-                        <div class="text-center">
-                            <h7 class="text-light">Tu dai</h7>
-                            <div id="baratto-uscita-tu-dai" class="border p-3 rounded d-flex flex-column align-items-center" style="width: 150px; height: 200px">
-                                <!-- figurina che vuoi dare caricata qui -->
+                    <div class="container">
+                        <div class="row justify-content-center gap-4 mt-3">
+                            <!-- sezione "tu dai" -->
+                            <div class="col-12 col-md-5 text-center">
+                                <h7 class="text-light">Tu dai</h7>
+                                <div id="baratto-uscita-tu-dai" class="p-3 d-flex flex-column align-items-center">
+                                    <!-- figurina che vuoi dare caricata qui -->
+                                </div>
                             </div>
-                        </div>
-                        <div class="text-center">
-                            <h7 class="text-light">In cambio di</h7>
-                            <div id="baratto-uscita-in-cambio-di" class="border p-3 rounded d-flex flex-column align-items-center" style="width: 150px; height: 200px">
-                                <!-- figurina che vuoi ricevere caricata qui -->
+                            <!-- sezione "in cambio di" -->
+                            <div class="col-12 col-md-5 text-center">
+                                <h7 class="text-light">In cambio di</h7>
+                                <div id="baratto-uscita-in-cambio-di" class="p-3 d-flex flex-column align-items-center">
+                                    <!-- figurina che vuoi ricevere caricata qui -->
+                                </div>
                             </div>
                         </div>
                     </div>
+                    
                     <div class="text-center mt-4">
-                        <button id="proponi-baratto-btn" class="btn btn-primary btn-lg" disabled>Proponi</button>
+                        <button id="proponi-baratto-btn" class="btn btn-primary btn-lg" type="submit">Proponi</button>
                     </div>
                 </div>
             </main>
