--- a/public/frontend/baratto.html
+++ b/public/frontend/baratto.html
@@ -144,9 +144,9 @@
                     <div class="row">
                         <!-- tabella delle proposte di scambio -->
                          <div class="col-md-8">
-                            <div class="table-responsive" style="max-height: 300px; overflow-y: auto;">
-                                <table class="table text-center align-middle table-striped table-hover">
-                                    <thead class="table-dark">
+                            <div class="table-responsive" style="max-height: 100%; overflow-y: auto;">
+                                <table class="table text-center align-middle table-striped table-bordered">
+                                    <thead class="table-light">
                                         <tr>
                                             <th>Utente</th>
                                             <th>Ti da</th>
